general fixes
fixed some font/scaling issues nothing too big

--- a/Home.css
+++ b/Home.css
@@ -114,7 +114,6 @@
 .u-section-2 .u-slider-1 {
   width: 388px;
   min-height: 350px;
-  height: auto;
   margin: 0 27px 40px auto;
 }
 
@@ -201,6 +200,10 @@
     margin-top: -364px;
     margin-right: 653px;
     margin-left: 62px;
+  }
+
+  .u-section-2 .u-slider-1 {
+    height: auto;
   }
 
   .u-section-2 .u-image-2 {
@@ -325,7 +328,7 @@
 
 .u-section-3 .u-text-2 {
   font-size: 2.1875rem;
-  margin: -60px 388px 0 auto;
+  margin: -60px 85px 0 538px;
 }
 
 .u-section-3 .u-icon-2 {
@@ -337,7 +340,7 @@
 .u-section-3 .u-text-3 {
   font-size: 2.1875rem;
   text-align: left;
-  margin: -60px 444px 0 auto;
+  margin: -60px 46px 0 538px;
 }
 
 .u-section-3 .u-icon-3 {
@@ -349,7 +352,7 @@
 .u-section-3 .u-text-4 {
   font-size: 2.1875rem;
   text-align: left;
-  margin: -60px 444px 60px auto;
+  margin: -60px 21px 60px 538px;
 }
 
 @media (max-width: 1199px) {
@@ -375,6 +378,7 @@
 
   .u-section-3 .u-text-3 {
     margin-right: 366px;
+    margin-left: 384px;
   }
 
   .u-section-3 .u-icon-3 {
@@ -383,6 +387,7 @@
 
   .u-section-3 .u-text-4 {
     margin-right: 366px;
+    margin-left: 359px;
   }
 }
 
@@ -407,6 +412,7 @@
 
   .u-section-3 .u-text-3 {
     margin-right: 280px;
+    margin-left: 164px;
   }
 
   .u-section-3 .u-icon-3 {
@@ -416,6 +422,7 @@
 
   .u-section-3 .u-text-4 {
     margin-right: 280px;
+    margin-left: 139px;
   }
 }
 
@@ -439,6 +446,7 @@
 
   .u-section-3 .u-text-3 {
     margin-right: 210px;
+    margin-left: 0;
   }
 
   .u-section-3 .u-icon-3 {
@@ -447,6 +455,7 @@
 
   .u-section-3 .u-text-4 {
     margin-right: 210px;
+    margin-left: 0;
   }
 }
 
